--- a/index.html
+++ b/index.html
@@ -1,127 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio</title>
-  </head>
-  <body>
-    <!-- contacts -->
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-        </ul>
-      </address>
-    </header>
-    <!-- About company -->
-    <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
-      </section>
-      <section>
-        <h2>About company</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700;900&display=swap"
+			rel="stylesheet"
+		/>
+		<title>WebStudio</title>
+		<link rel="stylesheet" href="./css/styles.css" />
+	</head>
+	<body class="page">
+		<!-- contacts -->
+		<header class="header">
+			<nav>
+				<a href="./index.html" class="logo-next"><span class="logo">Web</span>Studio</a>
+				<ul class="site-nav">
+					<li><a href="./portfolio.html">Studio</a></li>
+					<li><a href="./portfolio.html">Portfolio</a></li>
+					<li><a href="./portfolio.html">Contacts</a></li>
+				</ul>
+			</nav>
+			<address>
+				<ul class="auth-nav">
+					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+					<li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+				</ul>
+			</address>
+		</header>
+		<!-- About company -->
+		<main>
+			<section class="box-order">
+				<h1 class="slogan">Effective Solutions for Your Business</h1>
+				<button type="button" class="button-main">Order Service</button>
+			</section>
+			<section class="aside">
+				<h2>About company</h2>
+				<ul class="feature-list">
+					<li>
+						<h3 class="section">Strategy</h3>
+						<p class="section-item">
+							Our goal is to identify the business problem to walk away with the perfect and creative solution.
+						</p>
+					</li>
+					<li>
+						<h3 class="section">Punctuality</h3>
+						<p class="section-item">
+							Bring the key message to the brand's audience for the best price within the shortest possible time.
+						</p>
+					</li>
 
-          <li>
-            <h3>Diligence</h3>
-            <p>
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
-      </section>
+					<li>
+						<h3 class="section">Diligence</h3>
+						<p class="section-item">
+							Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+						</p>
+					</li>
+					<li>
+						<h3 class="section">Technologies</h3>
+						<p class="section-item">
+							Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+						</p>
+					</li>
+				</ul>
+			</section>
 
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
-            <img src="./images/rectangle71.jpg" width="360" alt="computer" />
-          </li>
-          <li>
-            <img
-              src="./images/rectangle72.jpg"
-              width="360"
-              alt="mobile phones"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/rectangle73.jpg"
-              width="360"
-              alt="mobile phone in hand"
-            />
-          </li>
-        </ul>
-      </section>
-      <!-- About team -->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
-            <img src="./images/photo1.jpg" width="264" alt="photo marka" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/photo2.jpg" width="264" alt="photo toma" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
-          </li>
+			<section>
+				<h2 class="title">What are we doing</h2>
+				<ul>
+					<li>
+						<img src="./images/rectangle71.jpg" width="360" alt="computer" />
+					</li>
+					<li>
+						<img src="./images/rectangle72.jpg" width="360" alt="mobile phones" />
+					</li>
+					<li>
+						<img src="./images/rectangle73.jpg" width="360" alt="mobile phone in hand" />
+					</li>
+				</ul>
+			</section>
+			<!-- About team -->
+			<section class="content">
+				<h2 class="title">Our Team</h2>
+				<ul>
+					<li>
+						<img src="./images/photo1.jpg" width="264" alt="photo marka" />
+						<h3 class="section">Mark Guerrero</h3>
+						<p class="section-item">Product Designer</p>
+					</li>
+					<li>
+						<img src="./images/photo2.jpg" width="264" alt="photo toma" />
+						<h3 class="section">Tom Ford</h3>
+						<p class="section-item">Frontend Developer</p>
+					</li>
 
-          <li>
-            <img src="./images/photo3.jpg" width="264" alt="photo camilii" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img src="./images/photo4.jpg" width="264" alt="photo daniela" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <!-- basement -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </footer>
-  </body>
+					<li>
+						<img src="./images/photo3.jpg" width="264" alt="photo camilii" />
+						<h3 class="section">Camila Garcia</h3>
+						<p class="section-item">Marketing</p>
+					</li>
+					<li>
+						<img src="./images/photo4.jpg" width="264" alt="photo daniela" />
+						<h3 class="section">Daniel Wilson</h3>
+						<p class="section-item">UI Designer</p>
+					</li>
+				</ul>
+			</section>
+		</main>
+		<!-- basement -->
+		<footer class="footer">
+			<a href="./index.html" class="logo-bottom"><span class="logo">Web</span>Studio</a>
+			<p class="subtitle">
+				Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+			</p>
+		</footer>
+	</body>
 </html>
