--- a/portfolio.html
+++ b/portfolio.html
@@ -5,27 +5,27 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700;900&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,800&family=Roboto:wght@400;500;700;900&display=swap"
 			rel="stylesheet"
 		/>
 		<title>WebStudio</title>
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
-	<body class="page">
+	<body>
 		<!-- contacts -->
 		<header class="header">
 			<nav>
 				<a href="./index.html" class="logo-next"><span class="logo">Web</span>Studio</a>
 				<ul class="site-nav">
-					<li><a href="">Studio</a></li>
-					<li><a href="">Portfolio</a></li>
-					<li><a href="">Contacts</a></li>
+					<li><a href="" class="header-link">Studio</a></li>
+					<li><a href="" class="header-link">Portfolio</a></li>
+					<li><a href="" class="header-link">Contacts</a></li>
 				</ul>
 			</nav>
 			<address>
 				<ul class="auth-nav">
-					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-					<li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+					<li><a href="mailto:info@devstudio.com" class="auth-nav-link">info@devstudio.com</a></li>
+					<li><a href="tel:+110001111111" class="auth-nav-link">+11 (000) 111-11-11</a></li>
 				</ul>
 			</address>
 		</header>
@@ -37,6 +37,8 @@
 				<button type="button" class="content"><span class="category">App</span></button>
 				<button type="button" class="content"><span class="category">Design</span></button>
 				<button type="button" class="content"><span class="category">Marketing</span></button>
+			</section>
+			<section>
 				<ul>
 					<li>
 						<img src="./images/img.jpg" width="360" alt="Banking App Interface Concept" />
