--- a/index.html
+++ b/index.html
@@ -38,38 +38,37 @@
 				<button type="button" class="button-main">Order Service</button>
 			</section>
 			<section class="aside">
-				<h2>About company</h2>
-				<ul class="feature-list">
+				<h2 class="visually-hidden">About company</h2>
+				<ul>
 					<li>
-						<h3 class="section">Strategy</h3>
-						<p class="section-item">
+						<h3 class="future-item">Strategy</h3>
+						<p class="future-text">
 							Our goal is to identify the business problem to walk away with the perfect and creative solution.
 						</p>
 					</li>
 					<li>
-						<h3 class="section">Punctuality</h3>
-						<p class="section-item">
+						<h3 class="future-item">Punctuality</h3>
+						<p class="future-text">
 							Bring the key message to the brand's audience for the best price within the shortest possible time.
 						</p>
 					</li>
 
 					<li>
-						<h3 class="section">Diligence</h3>
-						<p class="section-item">
+						<h3 class="future-item">Diligence</h3>
+						<p class="future-text">
 							Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
 						</p>
 					</li>
 					<li>
-						<h3 class="section">Technologies</h3>
-						<p class="section-item">
+						<h3 class="future-item">Technologies</h3>
+						<p class="future-text">
 							Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
 						</p>
 					</li>
 				</ul>
 			</section>
-
 			<section>
-				<h2 class="title">What are we doing</h2>
+				<h2 class="title-item">What are we doing</h2>
 				<ul>
 					<li>
 						<img src="./images/rectangle71.jpg" width="360" alt="computer" />
@@ -83,29 +82,29 @@
 				</ul>
 			</section>
 			<!-- About team -->
-			<section class="content">
-				<h2 class="title">Our Team</h2>
+			<section class="content-title">
+				<h2 class="title-item">Our Team</h2>
 				<ul>
 					<li>
 						<img src="./images/photo1.jpg" width="264" alt="photo marka" />
-						<h3 class="section">Mark Guerrero</h3>
-						<p class="section-item">Product Designer</p>
+						<h3 class="future-item">Mark Guerrero</h3>
+						<p class="future-text">Product Designer</p>
 					</li>
 					<li>
 						<img src="./images/photo2.jpg" width="264" alt="photo toma" />
-						<h3 class="section">Tom Ford</h3>
-						<p class="section-item">Frontend Developer</p>
+						<h3 class="future-item">Tom Ford</h3>
+						<p class="future-text">Frontend Developer</p>
 					</li>
 
 					<li>
 						<img src="./images/photo3.jpg" width="264" alt="photo camilii" />
-						<h3 class="section">Camila Garcia</h3>
-						<p class="section-item">Marketing</p>
+						<h3 class="future-item">Camila Garcia</h3>
+						<p class="future-text">Marketing</p>
 					</li>
 					<li>
 						<img src="./images/photo4.jpg" width="264" alt="photo daniela" />
-						<h3 class="section">Daniel Wilson</h3>
-						<p class="section-item">UI Designer</p>
+						<h3 class="future-item">Daniel Wilson</h3>
+						<p class="future-text">UI Designer</p>
 					</li>
 				</ul>
 			</section>
