--- a/portfolio.html
+++ b/portfolio.html
@@ -31,59 +31,60 @@
 		</header>
 		<main>
 			<section>
-				<h1>Information</h1>
-				<button type="button" class="content"><span class="button-all">All</span></button>
-				<button type="button" class="content"><span class="category">Web Site</span></button>
-				<button type="button" class="content"><span class="category">App</span></button>
-				<button type="button" class="content"><span class="category">Design</span></button>
-				<button type="button" class="content"><span class="category">Marketing</span></button>
+				<h1 class="visually-hidden">Information</h1>
+				<button type="button" class="button-main"><span class="button-item">All</span></button>
+				<button type="button" class="button-main"><span class="button-item">App</span></button>
+				<button type="button" class="button-main"><span class="button-item">Web Site</span></button>
+				<button type="button" class="button-main"><span class="button-item">Design</span></button>
+				<button type="button" class="button-main"><span class="button-item">Marketing</span></button>
 			</section>
 			<section>
+				<h2 class="visually-hidden">Company results</h2>
 				<ul>
 					<li>
 						<img src="./images/img.jpg" width="360" alt="Banking App Interface Concept" />
-						<h3 class="section">Banking App Interface Concept</h3>
-						<p class="section-item">App</p>
+						<h3 class="future-item">Banking App Interface Concept</h3>
+						<p class="future-text">App</p>
 					</li>
 					<li>
 						<img src="./images/img1.jpg" width="360" alt="Cashless Payment" />
-						<h3 class="section">Cashless Payment</h3>
-						<p class="section-item">Marketing</p>
+						<h3 class="future-item">Cashless Payment</h3>
+						<p class="future-text">Marketing</p>
 					</li>
 					<li>
 						<img src="./images/img2.jpg" width="360" alt="Meditaion App" />
-						<h3 class="section">Meditaion App</h3>
-						<p class="section-item">App</p>
+						<h3 class="future-item">Meditaion App</h3>
+						<p class="future-text">App</p>
 					</li>
 					<li>
 						<img src="./images/img3.jpg" width="360" alt="Taxi Service" />
-						<h3 class="section">Taxi Service</h3>
-						<p class="section-item">Marketing</p>
+						<h3 class="future-item">Taxi Service</h3>
+						<p class="future-text">Marketing</p>
 					</li>
 					<li>
 						<img src="./images/img4.jpg" width="360" alt="Screen Illustrations" />
-						<h3 class="section">Screen Illustrations</h3>
-						<p class="section-item">Design</p>
+						<h3 class="future-item">Screen Illustrations</h3>
+						<p class="future-text">Design</p>
 					</li>
 					<li>
 						<img src="./images/img5.jpg" width="360" alt="Online Courses" />
-						<h3 class="section">Online Courses</h3>
-						<p class="section-item">Marketing</p>
+						<h3 class="future-item">Online Courses</h3>
+						<p class="future-text">Marketing</p>
 					</li>
 					<li>
 						<img src="./images/img6.jpg" width="360" alt="Instagram Stories Concept" />
-						<h3 class="section">Instagram Stories Concept</h3>
-						<p class="section-item">Design</p>
+						<h3 class="future-item">Instagram Stories Concept</h3>
+						<p class="future-text">Design</p>
 					</li>
 					<li>
 						<img src="./images/img7.jpg" width="360" alt="Organic Food" />
-						<h3 class="section">Organic Food</h3>
-						<p class="section-item">Web Site</p>
+						<h3 class="future-item">Organic Food</h3>
+						<p class="future-text">Web Site</p>
 					</li>
 					<li>
 						<img src="./images/img8.jpg" width="360" alt="Fresh Coffee" />
-						<h3 class="section">Fresh Coffee</h3>
-						<p class="section-item">Web Site</p>
+						<h3 class="future-item">Fresh Coffee</h3>
+						<p class="future-text">Web Site</p>
 					</li>
 				</ul>
 			</section>
