--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</header>
 		<!-- About company -->
 		<main>
-					<section class="box-order">
+			<section class="box-order">
 				<h1 class="slogan">Effective Solutions for Your Business</h1>
 				<button type="button" class="button-main">Order Service</button>
 			</section>
@@ -110,7 +110,7 @@
 			</section>
 		</main>
 		<!-- basement -->
-		<footer class="footer">
+		<footer class="footer-last">
 			<a href="./index.html" class="logo-bottom"><span class="logo">Web</span>Studio</a>
 			<p class="subtitle">
 				Increase the flow of customers and sales for your business with digital marketing & growth solutions.
