--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
 			</address>
 		</header>
 		<main>
-			<se>
+			<section>
 				<h1 class="visually-hidden">Information</h1>
 				<button type="button" class="button-main"><span class="button-item">All</span></button>
 				<button type="button" class="button-main"><span class="button-item">App</span></button>
@@ -88,7 +88,7 @@
 			</section>
 		</main>
 		<!-- basement -->
-		<footer class="footer">
+		<footer class="footer-last">
 			<a href="./index.html" class="logo-bottom"><span class="logo">Web</span>Studio</a>
 			<p class="subtitle">
 				Increase the flow of customers and sales for your business with digital marketing & growth solutions.
