--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,800&family=Roboto:wght@400;500;700;900&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
 			rel="stylesheet"
 		/>
 		<title>WebStudio</title>
@@ -19,9 +21,9 @@
 			<nav>
 				<a href="./index.html" class="logo-next"><span class="logo">Web</span>Studio</a>
 				<ul class="site-nav">
-					<li><a href="./portfolio.html" class="header-link">Studio</a></li>
-					<li><a href="./portfolio.html" class="header-link">Portfolio</a></li>
-					<li><a href="./portfolio.html" class="header-link">Contacts</a></li>
+					<li><a href="./portfolio.html" class="header-link current">Studio</a></li>
+					<li><a href="./portfolio.html" class="header-link current">Portfolio</a></li>
+					<li><a href="./portfolio.html" class="header-link current">Contacts</a></li>
 				</ul>
 			</nav>
 			<address>
