--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,800&family=Roboto:wght@400;500;700;900&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
 			rel="stylesheet"
 		/>
 		<title>WebStudio</title>
@@ -17,9 +19,9 @@
 			<nav>
 				<a href="./index.html" class="logo-next"><span class="logo">Web</span>Studio</a>
 				<ul class="site-nav">
-					<li><a href="" class="header-link">Studio</a></li>
-					<li><a href="" class="header-link">Portfolio</a></li>
-					<li><a href="" class="header-link">Contacts</a></li>
+					<li><a href="" class="header-link current">Studio</a></li>
+					<li><a href="" class="header-link current">Portfolio</a></li>
+					<li><a href="" class="header-link current">Contacts</a></li>
 				</ul>
 			</nav>
 			<address>
@@ -29,14 +31,26 @@
 				</ul>
 			</address>
 		</header>
-		<main>
+		<main class="portfolio-content">
 			<section>
 				<h1 class="visually-hidden">Information</h1>
-				<button type="button" class="button-main"><span class="button-item">All</span></button>
-				<button type="button" class="button-main"><span class="button-item">App</span></button>
-				<button type="button" class="button-main"><span class="button-item">Web Site</span></button>
-				<button type="button" class="button-main"><span class="button-item">Design</span></button>
-				<button type="button" class="button-main"><span class="button-item">Marketing</span></button>
+				<ul class="navigation">
+					<li
+						><button type="button" class="button-list"><span class="button-item">All</span></button></li
+					>
+					<li
+						><button type="button" class="button-list"><span class="button-item">App</span></button></li
+					>
+					<li
+						><button type="button" class="button-list"><span class="button-item">Web Site</span></button></li
+					>
+					<li
+						><button type="button" class="button-list"><span class="button-item">Design</span></button></li
+					>
+					<li
+						><button type="button" class="button-list"><span class="button-item">Marketing</span></button></li
+					>
+				</ul>
 				<h2 class="visually-hidden">Company results</h2>
 				<ul>
 					<li>
